--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,16 +1,129 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Spartan:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Spartan:wght@600&display=swap');
 
 // Exemple :
-$primary-color: #1890ff;
-$font-bold: 'Poppins', sans-serif;
-$font-light: 'Spartan', sans-serif;
+$primary-color: #0F172A;
+$blue-color: #4F5CD7;
+$font-bold: 'Spartan', sans-serif;
+$font-light: 'Poppins', sans-serif;
 
 body {
   font-family: $font-light;
-  background-color: #f5f5f5;
+  background-color: #fff;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: $font-bold;
+}
+
+
+img#img-logo {
+  width: 150px !important;
+}
+
+.container {
+  max-width: 1620px !important; // Augmente la largeur maximale du container
+}
+
+.btn {
+  &.btn-dark {
+    background-color: $primary-color !important;
+    border: 1px solid $primary-color !important;
+    color: #fff !important;
+    padding-left: 25px !important;
+    padding-right: 25px !important;
+    border-radius: 50px;
+    font-weight: bold;
+    transition: all 0.2s ease-in-out;
+
+    &:hover {
+      background-color: $primary-color !important;
+      border: 1px solid $primary-color !important;
+      color: #fff !important;
+      transition: all 0.2s ease-in-out;
+    }
+  }
+
+  &.btn-primary {
+    background-color: $blue-color !important;
+    border: 1px solid $blue-color !important;
+    color: #fff !important;
+    border-radius: 50px;
+    font-weight: bold;
+    transition: all 0.2s ease-in-out;
+
+    &:hover {
+      background-color: $blue-color !important;
+      border: 1px solid $blue-color !important;
+      color: #fff !important;
+      border-radius: 50px;
+      font-weight: bold;
+      transition: all 0.2s ease-in-out;
+    }
+  }
+
+  &.btn-outline-primary {
+    border: 1px solid $blue-color !important;
+    background-color: transparent;
+    color: $blue-color !important;
+    padding-left: 25px !important;
+    padding-right: 25px !important;
+    border-radius: 50px;
+    font-weight: bold;
+
+    &:hover {
+      background-color: $blue-color !important;
+      border: 1px solid $blue-color !important;
+      color: #fff !important;
+      font-weight: bold;
+    }
+  }
+
+
+  &.btn-outline-primar {
+    border: 1px solid $blue-color !important;
+    background-color: transparent;
+    color: $blue-color !important;
+    padding-top: 15px !important;
+    padding-bottom: 15px !important;
+    border-radius: 50px;
+    font-weight: bold;
+
+    &:hover {
+      background-color: $blue-color !important;
+      border: 1px solid $blue-color !important;
+      color: #fff !important;
+      font-weight: bold;
+    }
+  }
+
+}
+
+.top {
+  margin-top: 100px;
+}
+
+.search-box {
+  padding: 20px;
+  width: 100%;
+  border: 1px solid #F5F5F5;
+  border-radius: 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.scroller {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: -60px;
+}
+
+.ml-4 {
+  margin-left: 20px;
 }
