--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -22,8 +22,8 @@ img#img-logo {
 }
 
 .btn.btn-dark {
-  background-color: #0F172A !important;
-  border: 1px solid #0F172A !important;
+  background-color: #1E1E1E !important;
+  border: 1px solid #1E1E1E !important;
   color: #fff !important;
   padding-left: 25px !important;
   padding-right: 25px !important;
@@ -32,60 +32,60 @@ img#img-logo {
   transition: all 0.2s ease-in-out;
 }
 .btn.btn-dark:hover {
-  background-color: #0F172A !important;
-  border: 1px solid #0F172A !important;
+  background-color: #1E1E1E !important;
+  border: 1px solid #1E1E1E !important;
   color: #fff !important;
   transition: all 0.2s ease-in-out;
 }
 .btn.btn-primary {
-  background-color: #4F5CD7 !important;
-  border: 1px solid #4F5CD7 !important;
+  background-color: #D97706 !important;
+  border: 1px solid #D97706 !important;
   color: #fff !important;
   border-radius: 50px;
   font-weight: bold;
   transition: all 0.2s ease-in-out;
 }
 .btn.btn-primary:hover {
-  background-color: #4F5CD7 !important;
-  border: 1px solid #4F5CD7 !important;
+  background-color: #D97706 !important;
+  border: 1px solid #D97706 !important;
   color: #fff !important;
   border-radius: 50px;
   font-weight: bold;
   transition: all 0.2s ease-in-out;
 }
 .btn.btn-outline-primary {
-  border: 1px solid #4F5CD7 !important;
+  border: 1px solid #D97706 !important;
   background-color: transparent;
-  color: #4F5CD7 !important;
+  color: #D97706 !important;
   padding-left: 25px !important;
   padding-right: 25px !important;
   border-radius: 50px;
   font-weight: bold;
 }
 .btn.btn-outline-primary:hover {
-  background-color: #4F5CD7 !important;
-  border: 1px solid #4F5CD7 !important;
+  background-color: #D97706 !important;
+  border: 1px solid #D97706 !important;
   color: #fff !important;
   font-weight: bold;
 }
 .btn.btn-outline-primary.active {
-  background-color: #4F5CD7 !important;
-  border: 1px solid #4F5CD7 !important;
+  background-color: #D97706 !important;
+  border: 1px solid #D97706 !important;
   color: #fff !important;
   font-weight: bold;
 }
 .btn.btn-outline-primar {
-  border: 1px solid #4F5CD7 !important;
+  border: 1px solid #1E40AF !important;
   background-color: transparent;
-  color: #4F5CD7 !important;
+  color: #1E40AF !important;
   padding-top: 15px !important;
   padding-bottom: 15px !important;
   border-radius: 50px;
   font-weight: bold;
 }
 .btn.btn-outline-primar:hover {
-  background-color: #4F5CD7 !important;
-  border: 1px solid #4F5CD7 !important;
+  background-color: #1E40AF !important;
+  border: 1px solid #1E40AF !important;
   color: #fff !important;
   font-weight: bold;
 }
