--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -17,6 +17,14 @@ img#img-logo {
   width: 150px !important;
 }
 
+#img-logo1 {
+  width: 250px !important;
+}
+
+.bg-light {
+  background-color: rgba(245, 245, 220, 0.2) !important;
+}
+
 .container {
   max-width: 1620px !important;
 }
@@ -136,7 +144,7 @@ img#img-logo {
 }
 
 .img-voiture {
-  border-radius: 5px;
+  border-radius: 10px;
   width: 100%;
   height: 320px;
   -o-object-fit: cover;
@@ -144,9 +152,57 @@ img#img-logo {
 }
 
 .img-voiture1 {
-  border-radius: 5px;
+  border-radius: 10px;
   width: 100%;
   height: 250px;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.img-article {
+  border-radius: 10px;
+  width: 100%;
+  height: 250px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.bg-banner2 {
+  width: 100%;
+  height: 30vh;
+  background-image: url(/src/assets/img/banner3.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 50%;
+  border-radius: 20px;
+  padding: 50px;
+}
+
+.text-decorate {
+  color: #575757;
+}
+
+.a {
+  color: #575757;
+}
+.a:hover {
+  color: #D97706;
+}
+
+ul {
+  margin-top: 15px;
+}
+ul li {
+  margin-top: 10px;
+  margin-left: -15px;
+  text-decoration: none;
+  list-style-type: none;
+}
+ul li a {
+  text-decoration: none;
+  color: #575757;
+}
+
+.bg-primary {
+  background-color: #D97706 !important;
 }/*# sourceMappingURL=main.css.map */
