--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -22,7 +22,7 @@ img#img-logo {
 }
 
 .bg-light {
-  background-color: rgba(245, 245, 220, 0.2) !important;
+  background-color: rgba(218, 218, 218, 0.2) !important;
 }
 
 .container {
@@ -151,6 +151,14 @@ img#img-logo {
      object-fit: cover;
 }
 
+.img-voiture3 {
+  border-radius: 10px;
+  width: 100%;
+  height: 300px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
 .img-voiture1 {
   border-radius: 10px;
   width: 100%;
@@ -205,4 +213,16 @@ ul li a {
 
 .bg-primary {
   background-color: #D97706 !important;
+}
+
+.text-blue {
+  color: #1E40AF;
+}
+
+.text-primar {
+  color: #D97706;
+}
+
+.brr {
+  border-radius: 10px;
 }/*# sourceMappingURL=main.css.map */
