--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -116,7 +116,7 @@ img#img-logo {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: -60px;
+  margin-top: 10px;
 }
 
 .ml-4 {
@@ -186,6 +186,15 @@ img#img-logo {
   padding: 50px;
 }
 
+.banner {
+  width: 75vw;
+  height: 100vh;
+  background-image: url(/src/assets/img/1.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 50%;
+}
+
 .text-decorate {
   color: #575757;
 }
@@ -226,4 +235,8 @@ ul li a {
 
 .brr {
   border-radius: 10px;
+}
+
+.bg-whiter {
+  background-color: rgba(255, 255, 255, 0.95);
 }/*# sourceMappingURL=main.css.map */
