--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -119,6 +119,32 @@ img#img-logo {
     }
   }
 
+  
+  &.btn-outline-light {
+    border: 1px solid #fff  !important;
+    background-color: transparent;
+    color: #fff !important;
+    padding-top: 15px !important;
+    padding-bottom: 15px !important;
+    border-radius: 50px;
+    font-weight: bold;
+
+    &:hover {
+      background-color: $primary-color !important;
+      border: 1px solid $primary-color !important;
+      color: #fff !important;
+      font-weight: bold;
+    }
+  }
+
+}
+
+.fsl {
+  font-size: 16px !important;
+
+  &:hover {
+     color: $primary-color;
+  }
 }
 
 .top {
@@ -197,6 +223,21 @@ img#img-logo {
   object-fit: cover;
 }
 
+.bg-banner {
+  width: 100%;
+  height: 90vh;
+  background-image: url(/src/assets/img/2.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 50%;
+  border-radius: 20px;
+  padding: 50px;
+}
+
+.topy {
+  margin-top: 250px;
+}
+
 .bg-banner2 {
   width: 100%;
   height: 30vh;
@@ -261,6 +302,12 @@ ul {
 .brr {
   border-radius: 10px;
 }
+
+.bg-whiter1 {
+  background-color: rgba($color: #fff, $alpha: 0.90);
+  border-radius: 20px;
+}
+
 
 .bg-whiter {
   background-color: rgba($color: #fff, $alpha: 0.95);
